--- a/hivstr/DESCRIPTION
+++ b/hivstr/DESCRIPTION
@@ -22,4 +22,7 @@ Imports:
 Roxygen: list(markdown = TRUE)
 RoxygenNote: 7.0.2
 Suggests: 
-    testthat (>= 2.1.0)
+    testthat (>= 2.1.0),
+    knitr,
+    rmarkdown
+VignetteBuilder: knitr
