--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -7,10 +7,10 @@ Authors@R:
            role = c("aut", "cre"),
            email = "inyabuto@psi.org",
            comment = c(ORCID = "https://orcid.org/0000-0003-2713-3447"))
-Description: Bypass using HIV Self Testing Distribution Channels, a category combination filter,
+Description: Bypass HIV Self Testing Distribution Channels, a category combination filter,
     directly from the analytic views. It makes it easier to combine/visualize HIV self testing 
     data with other sources, build indicators and visualize data on a single chart/table.
-License: What license it uses
+License: GPL-3
 Encoding: UTF-8
 LazyData: true
 Imports: 
