--- a/NAMESPACE
+++ b/NAMESPACE
@@ -5,7 +5,6 @@ export(api_get)
 export(bypass_ke_distr)
 export(kits_data_elements)
 export(kits_endpoint)
-importFrom(curl,has_internet)
 importFrom(httr,GET)
 importFrom(httr,POST)
 importFrom(httr,authenticate)
@@ -17,5 +16,6 @@ importFrom(httr,status_code)
 importFrom(httr,timeout)
 importFrom(httr,user_agent)
 importFrom(jsonlite,toJSON)
+importFrom(rlang,.data)
 importFrom(utils,URLencode)
 importFrom(utils,str)
