--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -19,9 +19,11 @@ Imports:
     dplyr,
     purrr,
     curl,
+    cli,
+    crayon,
     rlang
 Roxygen: list(markdown = TRUE)
-RoxygenNote: 7.0.2
+RoxygenNote: 7.1.1
 Suggests: 
     testthat (>= 2.1.0),
     knitr,
